Running DB & Service in Docker
